changes on docker files

--- a/Back/Dockerfile
+++ b/Back/Dockerfile
@@ -1,13 +1,13 @@
 # Sets the base image of the application to the node’s official image.
 FROM node:16
 
-# Sets the Working Directory as "/server"
-WORKDIR /server
-# Copies the package.json file into "/server" and runs npm i
-COPY package.json /server
+# Sets the Working Directory as "/app"
+WORKDIR /app
+# Copies the package.json file into "/app" and runs npm i
+COPY package.json /app
 RUN npm i
-# Copies the entire source code into "/server"
-COPY . /server
+# Copies the entire source code into "/app"
+COPY . /app
 
 # Specifies the port the node app will be running on
 EXPOSE 5000
