--- a/Front/Dockerfile
+++ b/Front/Dockerfile
@@ -1,13 +1,13 @@
 # Official node image
 FROM node:16
-# Setting the working directory to "/client"
-WORKDIR /client
+# Setting the working directory to "/app"
+WORKDIR /app
 
-# Copies the package.json file into "/client" and run npm i
-COPY package.json /client
+# Copies the package.json file into "/app" and run npm i
+COPY package.json /app
 RUN npm install
-# Copies the entire react source code into "/client"
-COPY . /client
+# Copies the entire react source code into "/app"
+COPY . /app
 
 EXPOSE 3000
 # Starting the react app
